Hide 'Undo Send' button for message that was sent more than 1 minute ago

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -918,6 +918,7 @@
       }
     },
     "Delete Message" : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-BR" : {
           "stringUnit" : {
@@ -3159,6 +3160,9 @@
           }
         }
       }
+    },
+    "Undo Send" : {
+
     },
     "Unfollow post" : {
       "extractionState" : "stale",
