--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1352,6 +1352,9 @@
         }
       }
     },
+    "Enter a Community Name" : {
+
+    },
     "Error" : {
       "localizations" : {
         "pt-BR" : {
