--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -493,6 +493,9 @@
         }
       }
     },
+    "Asking..." : {
+
+    },
     "Audio %lld" : {
 
     },
@@ -1771,6 +1774,9 @@
 
     },
     "Join" : {
+
+    },
+    "Joining..." : {
 
     },
     "Just chatting" : {
