Navigate user to CommunityChatScreen after joining public community

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -797,6 +797,9 @@
     "Communities Around You" : {
 
     },
+    "CommunityDetailScreen" : {
+
+    },
     "Confirm" : {
       "localizations" : {
         "pt-BR" : {
