Add description, CircleTimerView and location to CommunityDetailScreen

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -374,6 +374,9 @@
         }
       }
     },
+    "Add Group Description" : {
+
+    },
     "admin" : {
 
     },
@@ -810,6 +813,9 @@
 
     },
     "Community Info" : {
+
+    },
+    "Community's Location" : {
 
     },
     "Confirm" : {
