Add ExitCommunity feature

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1860,6 +1860,9 @@
     "Leave Community" : {
 
     },
+    "Leaving Community..." : {
+
+    },
     "liked" : {
       "localizations" : {
         "pt-BR" : {
