Feature - Delete Community

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -998,6 +998,9 @@
         }
       }
     },
+    "Deleting Community..." : {
+
+    },
     "Deleting this community will permanently remove it for all members without prior notice. This action cannot be undone." : {
 
     },
