Add profile image to ProfileTab Item

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -636,6 +636,12 @@
     "Briefly describe your Community..." : {
 
     },
+    "Business" : {
+
+    },
+    "BusinessScreen" : {
+
+    },
     "By signing up, you agree to our [Terms of Use](https://aroundyou3.wordpress.com/terms-of-use) and [Privacy Policy](https://aroundyou3.wordpress.com/policy-privacy)." : {
       "localizations" : {
         "pt-BR" : {
