--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -2120,6 +2120,9 @@
     "New Community" : {
 
     },
+    "No business found nearby." : {
+
+    },
     "No communities found nearby." : {
 
     },
