Add 'Lost and Found' and 'Report' sections

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -2036,6 +2036,9 @@
     "Lost items" : {
 
     },
+    "lostAndFound" : {
+
+    },
     "Male" : {
 
     },
@@ -2749,6 +2752,9 @@
           }
         }
       }
+    },
+    "report" : {
+
     },
     "Report" : {
       "localizations" : {
