Finished UrgentScreen with the police idea

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -398,6 +398,9 @@
     "Age Range" : {
 
     },
+    "Alert Police" : {
+
+    },
     "All" : {
       "localizations" : {
         "pt-BR" : {
@@ -445,9 +448,6 @@
           }
         }
       }
-    },
-    "Animal Violence" : {
-
     },
     "Answering %@" : {
       "extractionState" : "stale",
@@ -1202,9 +1202,6 @@
         }
       }
     },
-    "Domestic Violence" : {
-
-    },
     "Don't Allow" : {
       "localizations" : {
         "pt-BR" : {
@@ -1516,9 +1513,6 @@
     "Female" : {
 
     },
-    "Filter" : {
-
-    },
     "Filters" : {
 
     },
@@ -1649,9 +1643,6 @@
         }
       }
     },
-    "Help me!" : {
-
-    },
     "Help us to improve the app we love! If you find any failure, tell us what happened." : {
       "localizations" : {
         "pt-BR" : {
@@ -1735,9 +1726,6 @@
           }
         }
       }
-    },
-    "I lost something" : {
-
     },
     "I'm a..." : {
 
@@ -2035,9 +2023,6 @@
           }
         }
       }
-    },
-    "Lost items" : {
-
     },
     "lostAndFound" : {
 
@@ -2791,9 +2776,6 @@
         }
       }
     },
-    "Report animal abuse" : {
-
-    },
     "Report Bug" : {
       "localizations" : {
         "pt-BR" : {
@@ -2828,9 +2810,6 @@
           }
         }
       }
-    },
-    "Report domestic violence" : {
-
     },
     "Report Post" : {
       "localizations" : {
@@ -3248,6 +3227,9 @@
     "These users want to join your community. Approve their request or ignore it." : {
 
     },
+    "This functionality should only be used in case of a real emergency. Your location will be automatically shared with the police." : {
+
+    },
     "This message was not sent" : {
       "localizations" : {
         "pt-BR" : {
@@ -3368,6 +3350,9 @@
           }
         }
       }
+    },
+    "Under Construction." : {
+
     },
     "Undo Send" : {
 
