--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -2834,6 +2834,9 @@
         }
       }
     },
+    "Report an Incident" : {
+
+    },
     "Report Bug" : {
       "localizations" : {
         "pt-BR" : {
