--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1853,6 +1853,9 @@
         }
       }
     },
+    "Incident Description" : {
+
+    },
     "Iniciar Gravação" : {
 
     },
@@ -3543,6 +3546,9 @@
           }
         }
       }
+    },
+    "Victim Details" : {
+
     },
     "View All" : {
 
