--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1917,6 +1917,9 @@
     "Item description (optional)" : {
 
     },
+    "Item Info" : {
+
+    },
     "Join" : {
 
     },
@@ -2086,6 +2089,12 @@
       }
     },
     "Lost & Found" : {
+
+    },
+    "Lost at " : {
+
+    },
+    "Lost Item" : {
 
     },
     "Lost Item Information" : {
@@ -2271,6 +2280,9 @@
       }
     },
     "Offer a reward?" : {
+
+    },
+    "Offers Reward." : {
 
     },
     "OK" : {
