Add 'Item Found' label to PostView

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1920,6 +1920,9 @@
     "Item description (optional)" : {
 
     },
+    "Item Found" : {
+
+    },
     "Item Info" : {
 
     },
@@ -2095,9 +2098,6 @@
 
     },
     "Lost at " : {
-
-    },
-    "Lost Item" : {
 
     },
     "Lost Item Information" : {
